Table cliente {
  id_cliente int [pk, increment]
  nome_cliente varchar(100) [not null]
  cnpj char(14) [not null, unique]
  email varchar(150) [not null, unique]
  telefone char(11)
  criado_em datetime
}

Table funcionario_cliente {
  id_funcionario int [pk, increment]
  nome_funcionario varchar(100) [not null]
  email varchar(150) [not null, unique]
  telefone char(11)
  cargo varchar(50)
  id_cliente int [not null, ref: > cliente.id_cliente]
}

Table agente {
  id_agente int [pk, increment]
  nome_agente varchar(100) [not null]
  email varchar(150) [not null, unique]
  telefone char(11)
  cargo varchar(50)
  criado_em datetime
}

Table tipo_equipamento {
  id_tipo_equipamento int [pk, increment]
  nome_tipo varchar(50) [not null]
  descricao varchar(255)
}

Table equipamento {
  id_equipamento int [pk, increment]
  nome_equipamento varchar(100) [not null]
  descricao varchar(255)
  numero_serie varchar(50) [not null, unique]
  status varchar(20) [not null, default: 'Disponível']
  id_tipo_equipamento int [not null, ref: > tipo_equipamento.id_tipo_equipamento]
  criado_em datetime [default: `getdate()`]
  Note: 'Status pode ser: Disponível ou Indisponível'
}

Table locacao {
  id_locacao int [pk, increment]
  id_cliente int [not null, ref: > cliente.id_cliente]
  id_funcionario int [not null, ref: > funcionario_cliente.id_funcionario]
  id_agente int [not null, ref: > agente.id_agente]
  data_inicio datetime [not null]
  data_fim datetime
  status varchar(20) [not null]
  observacoes varchar(255)
  criado_em datetime
  Note: 'Status pode ser: Ativa, Finalizada ou Cancelada'
}

Table item_locacao {
  id_item_locacao int [pk, increment]
  id_locacao int [not null, ref: > locacao.id_locacao]
  id_equipamento int [not null, ref: > equipamento.id_equipamento]
  data_retirada datetime
  data_devolucao datetime
  condicao_retirada varchar(255)
  condicao_devolucao varchar(255)
}

Table manutencao {
  id_manutencao int [pk, increment]
  id_equipamento int [not null, ref: > equipamento.id_equipamento]
  id_agente int [not null, ref: > agente.id_agente]
  data_inicio datetime [not null]
  data_fim datetime
  descricao varchar(255)
  tipo varchar(20) [not null]
  status varchar(20) [not null]
  Note: 'Status pode ser: Aberta, Pendente ou Concluída'
}
